--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: CI Workflow
+name: Docker-Test
 
 on:
   push:
@@ -9,7 +9,7 @@ on:
       - master
 
 jobs:
-  build:
+  build & test:
     runs-on: ubuntu-latest
 
     steps:
@@ -22,13 +22,5 @@ jobs:
       - name: Build Docker image
         run: docker build -t docker-react -f Dockerfile.dev .
 
-  test:
-    runs-on: ubuntu-latest
-    needs: build
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
       - name: Run tests
-        run: docker run -e CI=true docker-react npm run test        
+        run: docker run -e CI=true docker-react npm run test
