added deployment workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,7 +9,7 @@ on:
       - master
 
 jobs:
-  build_and_test:
+  build_and_test_and_deploy:
     runs-on: ubuntu-latest
 
     steps:
@@ -24,3 +24,15 @@ jobs:
 
       - name: Run tests
         run: docker run -e CI=true docker-react npm run test
+
+      - name: Deploy to EB
+        uses: einaregilsson/beanstalk-deploy@v18
+        with:
+          aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
+          aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
+          application_name: frontend
+          environment_name: Frontend-env
+          existing_bucket_name: elasticbeanstalk-us-east-1-221125602218
+          region: us-east-1
+          version_label: ${{ github.sha }}
+          deployment_package: deploy.zip
